--- a/.github/workflows/push-to-codeberg.yml
+++ b/.github/workflows/push-to-codeberg.yml
@@ -6,8 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Clone from GitHub
-        run: git clone https://github.com/quizfreely/quizfreely-api.git
+        run: git clone https://github.com/quizfreely/api.git
       - name: Push to Codeberg
         run: |
-          cd quizfreely-api
-          git push https://ehanahamed:${{ secrets.CODEBERG_TOKEN }}@codeberg.org/quizfreely/quizfreely-api.git --all
+          cd api
+          git push https://ehanahamed:${{ secrets.CODEBERG_TOKEN }}@codeberg.org/quizfreely/api.git --all
