conditionally route oauth google based on env var and update env.example docs

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,22 @@
 PORT=8008
+
 DB_URL=postgres://quizfreely_api:PASSWORD@localhost:5432/quizfreely_db
+
+# for production: PRETTY_LOG=false
+# pretty print logs for easier debugging in development
+# disable for production for better performance
 PRETTY_LOG=true
+
+ENABLE_OAUTH_GOOGLE=false
+
+# if ENABLE_OAUTH_GOOGLE is true,
+# uncomment OAUTH_GOOGLE_CLIENT_ID, OAUTH_GOOGLE_CLIENT_SECRET,
+# OAUTH_GOOGLE_CALLBACK_URL, and OAUTH_FINAL_REDIRECT_URL
+
+# OAUTH_GOOGLE_CLIENT_ID=123-abc456def789.apps.googleusercontent.com
+# OAUTH_GOOGLE_CLIENT_SECRET=ABC-DEf123_4ab-CD567
+# 
+# OAUTH_GOOGLE_CALLBACK_URL="http://localhost:8080/api/oauth/google/callback"
+# 
+# OAUTH_FINAL_REDIRECT_URL="http://localhost:8080/sign-in"
+
