--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ ENABLE_OAUTH_GOOGLE=false
 # OAUTH_GOOGLE_CLIENT_ID=123-abc456def789.apps.googleusercontent.com
 # OAUTH_GOOGLE_CLIENT_SECRET=ABC-DEf123_4ab-CD567
 # 
-# OAUTH_GOOGLE_CALLBACK_URL="http://localhost:8080/api/oauth/google/callback"
+# OAUTH_GOOGLE_CALLBACK_URL=http://localhost:8080/api/oauth/google/callback
 # 
-# OAUTH_FINAL_REDIRECT_URL="http://localhost:8080/sign-in"
+# OAUTH_FINAL_REDIRECT_URL=http://localhost:8080/sign-in
 
