--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ PORT=8008
 
 DB_URL=postgres://quizfreely_api:PASSWORD@localhost:5432/quizfreely_db
 
+DB_MIGRATION_URL=postgres://quizfreely_db_admin:PASSWORD@localhost:5432/quizfreely_db
+
 # for production: PRETTY_LOG=false
 # pretty print logs for easier debugging in development
 # disable for production for better performance
