we're building it uuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuup to break it back doooooooooooooooooooooooooooooooooooooooownnnnnnnnnnnnnnnnnnnnn

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -157,3 +157,9 @@ models:
     model:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
+  Studyset:
+    fields:
+      user:
+        resolver: true
+      terms:
+        resolver: true
