add resolver for term progress

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -163,3 +163,7 @@ models:
         resolver: true
       terms:
         resolver: true
+  Term:
+    fields:
+      progress:
+        resolver: true
