--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,15 @@ DB_MIGRATION_URL=postgres://quizfreely_db_admin:PASSWORD@localhost:5432/quizfree
 # disable for production for better performance
 PRETTY_LOG=true
 
+# change BASE_PATH if the API is under a different path
+# like example.org/api/ instead of example.org/
+# (mabye when using a reverse proxy, mabye in production)
+# 
+# BASE_PATH needs to start with a slash (`/`)
+# 
+# example: BASE_PATH=/api/
+BASE_PATH=/
+
 ENABLE_OAUTH_GOOGLE=false
 
 # if ENABLE_OAUTH_GOOGLE is true,
