add reverse top confusion pairs for backwards matching pairs

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -173,6 +173,8 @@ models:
         resolver: true
       top_confusion_pairs:
         resolver: true
+      top_reverse_confusion_pairs:
+        resolver: true
   TermConfusionPair:
     fields:
       term:
